--- a/SkypathVR/Resources/layout/Main.axml
+++ b/SkypathVR/Resources/layout/Main.axml
@@ -3,5 +3,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/OutputImage" />
 </LinearLayout>
